# storage/api-docs/api-docs.json
@@ -6,6 +6,124 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/auth/login": {
+            "post": {
+                "tags": [
+                    "login"
+                ],
+                "summary": "Login",
+                "operationId": "f92ff81e405f6f6224ed353490975ced",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "email": "musk@email.com",
+                                    "password": "password1234"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/auth/logout": {
+            "post": {
+                "tags": [
+                    "login"
+                ],
+                "summary": "Logout",
+                "operationId": "ac1c8a886ecd17e108b62c43687439ed",
+                "requestBody": {
+                    "content": {
+                        "application/json": {}
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/auth/register": {
+            "post": {
+                "tags": [
+                    "login"
+                ],
+                "summary": "Register",
+                "operationId": "e7e369b43858339ddf6d345e5dfdf7a1",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "name": "Musk",
+                                    "email": "musk@email.com",
+                                    "password": "password1234"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/user": {
+            "get": {
+                "tags": [
+                    "login"
+                ],
+                "summary": "Dados usuário logado",
+                "description": "Get user",
+                "operationId": "a2bd06e3c2c9642a09ed09bb27bfb1f8",
+                "responses": {
+                    "default": {
+                        "description": "List Cardapios"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/cardapios?with[]=items": {
             "get": {
                 "tags": [
@@ -65,7 +183,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/cardapios/{id}?with[]=categoria&with[]=items": {
@@ -161,7 +284,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -191,7 +319,12 @@
                     "default": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/cardapio-items": {
@@ -240,7 +373,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/cardapio-items/{id}": {
@@ -322,7 +460,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -352,7 +495,12 @@
                     "default": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/categorias?with[]=cardapios": {
@@ -398,7 +546,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/categorias/{id}?with[]=cardapios": {
@@ -478,7 +631,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -508,7 +666,12 @@
                     "default": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/items?with[]=cardapios": {
@@ -555,7 +718,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/items/{id}?with[]=cardapios": {
@@ -635,7 +803,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -665,7 +838,224 @@
                     "default": {
                         "description": "OK"
                     }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/reservas?with[]=cardapio": {
+            "get": {
+                "tags": [
+                    "Reservas"
+                ],
+                "summary": "Listagem de reservas e cardapios relacionados",
+                "description": "Get Reservas",
+                "operationId": "a151e1596fed3cb766d9657aedc260db",
+                "responses": {
+                    "default": {
+                        "description": "List Reservas"
+                    }
                 }
+            }
+        },
+        "/api/reservas": {
+            "post": {
+                "tags": [
+                    "Reservas"
+                ],
+                "summary": "Add new Reserva",
+                "description": "Add Reserva",
+                "operationId": "c23f9853525a5a4ad84cd02e1a78944a",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "data": {
+                                        "type": "string"
+                                    },
+                                    "hora": {
+                                        "type": "string"
+                                    },
+                                    "nome_reserva": {
+                                        "type": "string"
+                                    },
+                                    "qtd_pessoas": {
+                                        "type": "integer"
+                                    },
+                                    "contato": {
+                                        "type": "string"
+                                    },
+                                    "cardapio_id": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "data": "data",
+                                    "hora": "hora",
+                                    "nome_reserva": "nome",
+                                    "qtd_pessoas": 3,
+                                    "contato": "contato",
+                                    "cardapio_id": 1
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/reservas/{id}?with[]=cardapio": {
+            "get": {
+                "tags": [
+                    "Reservas"
+                ],
+                "summary": "Mostra a reserva e em qual cardápio será escolhido(opcional)",
+                "description": "Show Reserva",
+                "operationId": "08f3caffe3110479ba86ec659fc73cb7",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Parameter ",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "examples": {
+                            "int": {
+                                "summary": "An int value.",
+                                "value": "1"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "default": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/reservas/{id}": {
+            "put": {
+                "tags": [
+                    "Reservas"
+                ],
+                "summary": "Updates a Reserva",
+                "operationId": "32852a4adebca222dda1a1e9938dd697",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Update Reserva",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "int": {
+                                "summary": "item_id",
+                                "value": "1"
+                            }
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "data": {
+                                        "type": "string"
+                                    },
+                                    "hora": {
+                                        "type": "string"
+                                    },
+                                    "nome_reserva": {
+                                        "type": "string"
+                                    },
+                                    "qtd_pessoas": {
+                                        "type": "integer"
+                                    },
+                                    "contato": {
+                                        "type": "string"
+                                    },
+                                    "cardapio_id": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "data": "data",
+                                    "hora": "hora",
+                                    "nome_reserva": "nome",
+                                    "qtd_pessoas": 3,
+                                    "contato": "contato",
+                                    "cardapio_id": 1
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Reservas"
+                ],
+                "summary": "Delete Reserva",
+                "description": "Delete Reserva",
+                "operationId": "0551814bdb838036eeb0e13e5fcf3b92",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Parameter ",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "examples": {
+                            "int": {
+                                "summary": "An int value.",
+                                "value": "1"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "default": {
+                        "description": "OK"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         }
     },
